updated html and css

--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ header{
 }
 
 header h1{
-    padding: 10px;
+    padding-top: 100px;
     margin: auto;
     text-align: center;
 }
@@ -106,7 +106,6 @@ header h1{
 /* MENU STYLES */
 
 menu{
-    padding: 5px;
     display: inline-block;
     margin: auto;
 }
@@ -195,26 +194,21 @@ header p{
     padding: 10px;
 }
 
-.side-grid{
-    padding: 10px;
-    background-color: #7abfbf;
+.aside-grid{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 }
 
-.side-img{
+.aside-grid h4{
+    grid-column-start: 2;
+    grid-column-end: 4;
+}
+.aside-grid dl{
+    grid-column-start: 2;
+    grid-column-end: 4;
+}
+.aside-grid img{
     grid-column-start: 1;
-    grid-column-end: 2;
-}
-
-.side-h4{
-    grid-column-start: 2;
-    grid-column-end: 4;
-}
-
-.side-text{
-    grid-column-start: 2;
-    grid-column-end: 4;
 }
 
 .side-text dt{
@@ -226,48 +220,102 @@ header p{
     height: 100px;
 }
 
+
+
 /* NAV STYLES */
 
 nav {
-    width: 375px;
-    background-color: #f2f2f2;
-    position: absolute;
+    grid-area: nav;
+    min-width: 414px;
+    background-color: #ffffff;
+    box-shadow: 0px 3px 3px #bbb;
+    position: fixed;
     top: 0;
-    z-index:1;
+    z-index:5;
 }
-
-nav ul{
-    text-align: center;
-    transition: max-height .2s ease-out;
+nav ul {
+    grid-area: hamberger;
+    padding: 0;
+    overflow: hidden;
+    list-style: none;
+    max-height: 0;
 }
-
-nav li{
+nav li img {
+    display: none;
+}
+nav li a {
     display: block;
-    line-height: 3em;
-}
-
-nav a{
-    color: #eb5428;
+    padding: 20px;
     text-decoration: none;
-    display: block;
-    text-align: centers;
-    font-family: 'Besas Neue';
-    font-weight: bold;
+    text-align: center;
+    color: #eb5428;
 }
 
-nav img{
-    height: 25px;
-    width: 25px;
+nav li a:hover{
+    color: #f2f2f2;
+    background-color: #eb5428;
+}
+[href="#home"]{
+    position: fixed;
+    top: 0;
+}
+nav label {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    user-select: none;
+    bottom: 15px;
+    left: 15px;
+}
+label span {
+    background-color: #ffffff;
+    display: block;
+    height: 2px;
+    position: relative;
+    transition: background-color .2s ease-out;
+    width: 18px;
+}
+nav span {
+    display: block;
+    position: relative;
+ }
+nav label svg {
+    display: block;
+}
+label span:before, label span:after {
+    background: #ffffff;
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;
+    width: 100%;
+}
+nav input {
+    display: none;
+}
+nav input:checked ~ ul {
+    max-height: 550px;
+}
+
+
+/* FORM STYLES */
+form{
+    text-align: center;
+}
+form fieldset{
     visibility: hidden;
 }
-
-a:hover, input:hover {
-    background-color: #eb5428;
-    color: #f2f2f2;
+#search input{
+    border: 1px solid #eb5428;
 }
-
-
-
+#search button{
+    background-color: #eb5428;
+    border: 1px solid #eb5428;
+}
+#search svg{
+    height: 16px;
+    width: 16px;
+}
 
 
 
@@ -276,6 +324,9 @@ footer{
     margin: auto;
 }
 
+#social-media{
+    text-align: center;
+}
 #social-media ul{
     display: inline-block;
 }
