--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ header{
 }
 
 header h1{
-    padding-top: 100px;
+    padding-top: 160px;
     margin: auto;
     text-align: center;
 }
@@ -305,7 +305,9 @@ nav input:checked ~ ul {
 
 /* FORM STYLES */
 form{
-    text-align: center;
+    position: absolute;
+    top: 100px;
+    left: 150px;
 }
 form fieldset{
     visibility: hidden;
