html and css updated

--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@ h1{
 h2{
     font-size: 30px;
     visibility: hidden;
+    height: 1px;
 }
 
 h3{
@@ -89,6 +90,9 @@ dt{
     font-family: 'Montserrat';
     font-size: 16px;
     font-weight: bold;
+}
+footer h3{
+    height: 1px;
 }
 
 /* HEADER STYLES */
@@ -250,7 +254,7 @@ nav ul {
     max-height: 0;
 }
 nav li img {
-    display: none;
+    visibility: hidden;
 }
 nav li a {
     display: block;
@@ -305,9 +309,9 @@ nav input:checked ~ ul {
 
 /* FORM STYLES */
 form{
-    position: absolute;
-    top: 100px;
-    left: 150px;
+    position: relative;
+    bottom: 2420px;
+    text-align: center;
 }
 form fieldset{
     visibility: hidden;
@@ -323,7 +327,6 @@ form fieldset{
     height: 16px;
     width: 16px;
 }
-
 
 
 /* FOOTER STYLES*/
@@ -359,8 +362,8 @@ footer p{
 }
 
 footer img{
-    height: 200px;
-    width: 200px;
+    height: 50%;
+    width: 50%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -369,4 +372,73 @@ footer img{
 #copyright div{
     padding: 10px;
     text-align: center;
+}
+
+/* MEDIA */
+
+@media screen and (min-width: 768px){
+    body{
+        width: 768px;
+    }
+    menu{
+        width: 768px;
+    }
+    nav{
+        width: 768px;
+    }
+    #details{
+        margin: auto;
+        width: 50%;
+    }
+    #ingredients-directions{
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+    }
+    #medium-grid{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    #footer-flex{
+        display: flex;
+        flex-direction: row-reverse;
+    }
+    #copyright img{
+    height: auto;
+    }
+   
+   
+    
+  
+}
+@media screen and (min-width: 1280px){
+    body{
+        width: 1280px;
+    }
+    nav{
+        width: 1280px;
+    }
+    #details{
+        width: auto;
+        background-color: #000;
+        color: #7abfbf;
+    }
+    #medium-grid{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+    .aside-grid{
+        display: block;
+    }
+    aside img{
+        height: 250px;
+        width: 250px;
+    }
+    #footer-large{
+        width: 1280px;
+        display: inline-block;
+    }
+    #social{
+        float: right;
+    }
+  
 }
